--- a/web/templates/bundleDeclare.html
+++ b/web/templates/bundleDeclare.html
@@ -112,7 +112,7 @@
                     <!-- ============================================================== -->
                     <!-- Logo -->
                     <!-- ============================================================== -->
-                    <a class="navbar-brand" href="/">
+                    <a class="navbar-brand" href = "/NG999/">
                         <!-- Logo icon -->
                         {#<b class="logo-icon">
                             <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
@@ -389,7 +389,7 @@
                 })
                 .then(response => {
                     if (response.ok) {
-                        window.location.href = "/NG999/bundleDeclare/1"
+                        window.location.href = "/NG999/"bundleDeclare/1"
                     } else {
                         alert('Failed to declare bundle.');
                     
