--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -60,7 +60,7 @@
           <!-- ============================================================== -->
           <!-- Logo -->
           <!-- ============================================================== -->
-          <a class="navbar-brand" href="/">
+          <a class="navbar-brand" href = "/NG999/">
             <!-- Logo icon -->
             {#<b class="logo-icon">
               <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
@@ -139,11 +139,11 @@
           Dashboard
           </h2>
           <div class="card">
-            <div class="card-body">
+            <div class="card-body" >
               <div class="row">
                 <div class="col-md-3">
-                    <div class="card">
-                        <div class="card-body">
+                    <div class="card" >
+                        <div class="card-body" style="border: 3px solid green ;">
                         <i class="mdi mdi-account-plus"></i>
                             <h4 class="card-title">TOTAL WHOLESALER</h4>
                             <p class="card-text">{{dashList['wholeSaler']}}</p>
@@ -151,8 +151,8 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="card">
-                        <div class="card-body">
+                    <div class="card" >
+                        <div class="card-body" style="border: 3px solid blue ;">
                         <i class="mdi mdi-checkbox-marked"></i>
                             <h4 class="card-title">ACTIVE WHOLESALER</h4>
                             <p class="card-text" style="color: green;">{{dashList['active']}}</p>
@@ -161,7 +161,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <div class="card-body">
+                        <div class="card-body" style="border: 3px solid purple ;">
                         <i class="mdi mdi-close-box"></i>
                             <h4 class="card-title">INACTIVE WHOLESALER</h4>
                             <p class="card-text" style="color: red;">{{dashList['inactive']}}</p>
@@ -169,8 +169,8 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="card">
-                        <div class="card-body">
+                    <div class="card" >
+                        <div class="card-body" style="border: 3px solid orange;">
                             <i class="mdi mdi-account-multiple-plus"></i>
                             <h4 class="card-title">TOTAL MIGRATE USER</h4>
                             <p class="card-text">{{dashList['totalCust']}}</p>
