--- a/web/templates/dashboardWholeseller.html
+++ b/web/templates/dashboardWholeseller.html
@@ -61,7 +61,7 @@
           <!-- ============================================================== -->
           <!-- Logo -->
           <!-- ============================================================== -->
-          <a class="navbar-brand" href="/">
+          <a class="navbar-brand" href = "/NG999/">
             <!-- Logo icon -->
             {#<b class="logo-icon">
               <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
@@ -148,7 +148,7 @@
                 <div class="row">
                   <div class="col-md-3">
                     <div class="card">
-                      <div class="card-body">
+                      <div class="card-body" style="border: 3px solid green ;">
                       <i class="mdi mdi-account"></i>
                         <h4 class="card-title">Active User</h4>
                         <p class="card-text" style="color: green;">{{listCount['active']}}</p>
@@ -157,7 +157,7 @@
                   </div>
                   <div class="col-md-3">
                     <div class="card">
-                      <div class="card-body">
+                      <div class="card-body" style="border: 3px solid blue ;">
                        <i class="mdi mdi-account-multiple"></i>
                         <h4 class="card-title">TOTAL MIGRATE USER(S)</h4>
                         <p class="card-text">{{listCount['totalUser']}}</p>
@@ -166,7 +166,7 @@
                   </div>
                   <div class="col-md-3">
                     <div class="card">
-                      <div class="card-body">
+                      <div class="card-body" style="border: 3px solid purple ;">
                        <i class="mdi mdi-checkbox-marked"></i>
                         <h4 class="card-title">MIGRATE WITH DECLARATION</h4>
                         <p class="card-text" style="color: green;">{{listCount['withMigrate']}}</p>
@@ -175,7 +175,7 @@
                   </div>
                   <div class="col-md-3">
                     <div class="card">
-                      <div class="card-body">
+                      <div class="card-body" style="border: 3px solid orange;">
                         <i class="mdi mdi-close-box"></i>
                         <h4 class="card-title">MIGRATE WITHOUT DECLARATION</h4>
                         <p class="card-text" style="color: red;">{{listCount['withoutMigrate']}}</p>
