--- a/web/templates/withoutDeclaration.html
+++ b/web/templates/withoutDeclaration.html
@@ -112,7 +112,7 @@
                     <!-- ============================================================== -->
                     <!-- Logo -->
                     <!-- ============================================================== -->
-                    <a class="navbar-brand" href="/">
+                    <a class="navbar-brand" href = "/NG999/">
                         <!-- Logo icon -->
                         {#<b class="logo-icon">
                             <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
