--- a/web/templates/sidebarWholeseller.html
+++ b/web/templates/sidebarWholeseller.html
@@ -37,6 +37,17 @@
 
 
               <li class="sidebar-item">
+                <a
+                  class="sidebar-link waves-effect waves-dark sidebar-link"
+                  href="/NG999/fullList"
+                  aria-expanded="false"
+                  ><i class="mdi mdi-table"></i
+                  ><span class="hide-menu" style="white-space: normal;">Full Customer List</span></span></a
+                >
+              </li>
+
+
+              <li class="sidebar-item">
 
                 <a class="sidebar-link has-arrow waves-effect waves-dark" aria-expanded="false">
                   <span class="hide-menu">Declaration</span></a>
