Changed some css and html

--- a/web/templates/forgetPassVerification.html
+++ b/web/templates/forgetPassVerification.html
@@ -85,6 +85,7 @@
 <body>
     <div class="login-container">
         <h2>Password Reset</h2>
+        <h4>Verification code sent to email</h4>
 
         {% include 'debug.html' %}
 
