--- a/web/templates/forgetPassVerification.html
+++ b/web/templates/forgetPassVerification.html
@@ -85,7 +85,8 @@
 <body>
     <div class="login-container">
         <h2>Password Reset</h2>
-        <h4>Verification code sent to email</h4>
+        <h5>Verification code sent to email</h5>
+        <h6>Please check your spam folder as well</h6>
 
         {% include 'debug.html' %}
 
