--- a/web/templates/sidebarWholeseller.html
+++ b/web/templates/sidebarWholeseller.html
@@ -25,16 +25,6 @@
               </li>
 
 
-              <li class="sidebar-item">
-                <a
-                  class="sidebar-link waves-effect waves-dark sidebar-link"
-                  href="/NG999/withDeclaration"
-                  aria-expanded="false"
-                  ><i class="mdi mdi-table"></i
-                  ><span class="hide-menu" style="white-space: normal;">Customer List (With Declaration)</span></span></a
-                >
-              </li>
-
 
               <li class="sidebar-item">
                 <a
@@ -48,9 +38,23 @@
 
 
               <li class="sidebar-item">
+                <a
+                  class="sidebar-link waves-effect waves-dark sidebar-link"
+                  href="/NG999/withDeclaration"
+                  aria-expanded="false"
+                  ><i class="mdi mdi-table"></i
+                  ><span class="hide-menu" style="white-space: normal;">Customer With Declaration</span></span></a
+                >
+              </li>
+
+
+              
+
+
+              <li class="sidebar-item">
 
                 <a class="sidebar-link has-arrow waves-effect waves-dark" aria-expanded="false">
-                  <span class="hide-menu">Declaration</span></a>
+                  <span class="hide-menu">Customer Without Declaration</span></a>
   
                 <ul aria-expanded="false" class="collapse first-level pt-0 in">
 
